@@ -12,6 +12,7 @@ USE_DASH = 'kodion.video.quality.mpd'  # (bool)
 AUDIO_ONLY = 'kodion.audio_only'  # (bool)
 AGE_GATE = 'kodion.age.gate'  # (bool)
 SUBTITLE_LANGUAGE = 'kodion.subtitle.languages.num'  # (int)
+SUBTITLE_DOWNLOAD = 'kodion.subtitle.download'  # (bool)
 SETUP_WIZARD = 'kodion.setup_wizard'  # (bool)
 VERIFY_SSL = 'simple.requests.ssl.verify'  # (bool)
 LOCATION = 'youtube.location'  # (str)
