@@ -143,7 +143,9 @@ class Provider(kodion.AbstractProvider):
                  'youtube.client.ip': 30700,
                  'youtube.client.ip.failed': 30701,
                  'youtube.video.play_with_subtitles': 30702,
-                 'youtube.are.you.sure': 30703
+                 'youtube.are.you.sure': 30703,
+                 'youtube.subtitles.download': 30705,
+                 'youtube.pre.download.subtitles': 30706
                  }
 
     def __init__(self):
@@ -1005,9 +1007,15 @@ class Provider(kodion.AbstractProvider):
             sub_opts[sub_setting] = context.get_ui().bold(sub_opts[sub_setting])
 
             result = context.get_ui().on_select(context.localize(self.LOCAL_MAP['youtube.subtitle.language']), sub_opts)
-            if result == -1:
-                return False
-            context.get_settings().set_subtitle_languages(result)
+            if result > -1:
+                context.get_settings().set_subtitle_languages(result)
+
+            result = context.get_ui().on_yes_no_input(
+                context.localize(self.LOCAL_MAP['youtube.subtitles.download']),
+                context.localize(self.LOCAL_MAP['youtube.pre.download.subtitles'])
+            )
+            if result > -1:
+                context.get_settings().set_subtitle_download(result == 1)
         elif switch == 'listen_ip':
             local_ranges = ('10.', '172.16.', '192.168.')
             addresses = [iface[4][0] for iface in socket.getaddrinfo(socket.gethostname(), None) if iface[4][0].startswith(local_ranges)] + ['127.0.0.1', '0.0.0.0']
