@@ -8,6 +8,7 @@
         <setting id="kodion.video.quality.ask" type="bool" label="30009" default="false"/>
         <setting id="kodion.subtitle.configure" type="action" label="30600" enable="true" visible="true" option="close" action="RunPlugin(plugin://$ID/config/subtitles/)"/>
         <setting id="kodion.subtitle.languages.num" type="number" value="0" visible="false"/>
+        <setting id="kodion.subtitle.download" type="bool" default="false" visible="false"/>
         <setting id="youtube.suggested_videos" type="bool" label="30582" default="false"/>
         <setting id="kodion.play_count.percent" type="slider" label="30668" enable="true" default="85" range="1,1,99" option="int"/>
         <setting id="youtube.playlist.watchlater.autoremove" type="bool" label="30515" default="true" />
